--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # The directory Mix will write compiled artifacts to.
 /_build/
-
+/.idea/
 # If you run "mix test --cover", coverage assets end up here.
 /cover/
 
@@ -24,3 +24,5 @@ dunixir-*.tar
 
 # Ignore Elixir Language Server files (VS Code extension)
 /.elixir_ls/
+
+
